--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>About Me</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        
+        <div class="container">
+            <div class="image-section">
+                <img src="images/formal.JPG" alt="Profile Photograph" class="profile-pic">
+            </div>
+
+            <div class="divider"></div>
+
+            <div class="information">
+                <h1>Caleb Keener</h1>
+                <div class="facts">
+                    <p>Major: Computer Science</p>
+                    <p>Year: 2nd Year</p>
+                    <p>Hometown: Born in Basel, Switzerland</p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
